# sequoia-cert-store

./: .codespellrc  .gitlab-ci.yml  Cargo.toml  README.md
.cargo/: config.toml
src/: cert_db.rs  cert_store.rs  lazy_cert.rs  lib.rs  log.rs  macros.rs  store.rs
src/store/: autocrypt.rs  certd.rs  certs.rs  keyserver.rs  pep.rs  userid_index.rs
tests/: Makefile  cert2rust.sh  keyring.pgp  keyring.rs
tests/data/: README.md  alice-priv.pgp  alice.pgp  alice2-adopted-alice-priv.pgp  alice2-adopted-alice.pgp  alice2-priv.pgp  alice2.pgp  bob-priv.pgp  bob.pgp  carol-priv.pgp  carol.pgp  david-priv.pgp  david.pgp  ed-priv.pgp  ed.pgp  halfling-encryption.pgp  halfling-priv.pgp  halfling-signing.pgp  hans-puny-code-priv.pgp  hans-puny-code.pgp  steve-priv.pgp  steve.pgp  una-priv.pgp  una.pgp
tests/pep/: keys.db
