[package]
name = "sequoia-cert-store"
description = "A certificate database interface."
version = "0.3.0"
authors = ["Neal H. Walfield <neal@pep.foundation>",
        "Justus Winter <justus@sequoia-pgp.org>"]
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-cert-store"
readme = "README.md"
keywords = ["cryptography", "openpgp", "keyring", "database"]
categories = ["cryptography", "authentication", "email",
           "command-line-utilities"]
license = "LGPL-2.0-or-later"
edition = "2021"
rust-version = "1.63"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.18"
#chrono = "0.4"
#clap = { version = "4.0", features = [ "derive", "wrap_help" ] }
crossbeam = "0.8.1"
dirs = "5"
#enumber = "0.3"
#lazy_static = "1.4.0"
num_cpus = "1"
once_cell = "1.17"
openpgp-cert-d = "0.1"
rayon = "1"
sequoia-openpgp = { version = "1.13", default-features = false }
sequoia-net = { version = "0.27", default-features = false }
smallvec = "1.1"
thiserror = "1.0.2"
tokio = { version = "1.13", features = [ "rt" ] }

[dependencies.rusqlite]
version = "0.29"
features = ["collation", "blob"]

[dev-dependencies]
tempfile = "3"

[lib]
name = "sequoia_cert_store"
path = "src/lib.rs"

[target.'cfg(not(windows))'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-nettle", "__implicit-crypto-backend-for-tests"]  }

[target.'cfg(windows)'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-cng", "__implicit-crypto-backend-for-tests"] }

[package.metadata.docs.rs]
# Enables a crypto backend for the docs.rs generation:
features = ["sequoia-openpgp/default", "__implicit-crypto-backend-for-tests"]
